added ens user lookup

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@davatar/react": "^1.8.1",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3-react/core": "^6.1.9",
     "connected-react-router": "^6.9.1",
     "ethers": "^5.5.1",
     "firebase": "^9.6.0",
