--- a/packages/hardhat/.gitignore
+++ b/packages/hardhat/.gitignore
@@ -1,9 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules
+.env
+coverage
+coverage.json
+typechain
 
-# dependencies
-/node_modules
-/node_modules/*
-/.pnp
-.pnp.js
-
-
+#Hardhat files
+cache
+artifacts
