--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -26,6 +26,7 @@
     "connected-react-router": "^6.9.1",
     "ethers": "^5.5.1",
     "firebase": "^9.6.0",
+    "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
