started on profile page build

--- a/packages/react-app/.env
+++ b/packages/react-app/.env
@@ -6,3 +6,4 @@ REACT_APP_PROD_PROJECT_ID="communft-dnc"
 REACT_APP_PROD_STORAGE_BUCKET="communft-dnc.appspot.com"
 REACT_APP_PROD_MESSAGING_SENDER_ID="47490240971"
 REACT_APP_PROD_APP_ID="1:47490240971:web:ca69545b715c1d0773264e"
+REACT_APP_PROD_MEASUREMENT_ID="G-10S68KKDJ3"
