--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -29,6 +29,7 @@
     "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-sketch-canvas": "^6.1.0",
