--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -4,20 +4,24 @@
   "main": "index.js",
   "scripts": {
     "chain": "npx hardhat node",
-    "deploy": "hardhat deploy --export-all ../react-app/src/contracts/hardhat_contracts.json"
+    "compile": "npx hardhat compile",
+    "deploy": "npm run compile && npx hardhat run scripts/deploy.js --network localhost",
+    "deploy:rinkeby": "hardhat compile && npx hardhat run scripts/deploy.js --network rinkeby",
+    "deploy:mainnet": "npm run compile && npx hardhat run scripts/deploy.js --network mainnet"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "2.0.3",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^4.3.2",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@openzeppelin/contracts": "4.4.0",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.6.4",
+    "ethereum-waffle": "3.4.0",
+    "ethers": "5.5.2",
+    "hardhat": "2.7.0",
     "hardhat-deploy": "^0.9.14",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-tracer": "^1.0.0-alpha.6",
     "solidity-coverage": "^0.7.17"
-  }
+  },
+  "dependencies": {}
 }
