--- a/packages/react-app/firebase.json
+++ b/packages/react-app/firebase.json
@@ -1,13 +1,10 @@
 {
   "hosting": {
-    "site": "communft",
     "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
   },
   "firestore": {
@@ -30,8 +27,14 @@
     "hosting": {
       "port": 5000
     },
+    "storage": {
+      "port": 9199
+    },
     "ui": {
       "enabled": true
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
