--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@web3-react/core": "^6.1.9",
+    "@web3-ui/core": "^0.2.1",
     "connected-react-router": "^6.9.1",
     "ethers": "^5.5.1",
     "firebase": "^9.6.0",
