--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@themesberg/tailwind-datepicker": "^1.1.0",
     "@web3-react/core": "^6.1.9",
     "@web3-ui/core": "^0.2.1",
     "connected-react-router": "^6.9.1",
