--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -21,25 +21,27 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "connected-react-router": "^6.9.1",
-    "ethers": "^5.5.1",
-    "firebase": "^9.6.0",
+    "ethers": "^5.6.5",
+    "firebase": "^9.8.0",
     "interactjs": "^1.10.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.3.0",
     "react-sketch-canvas": "^6.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "react-scripts": "^5.0.0",
-    "tailwindcss": "^3.0.13",
-    "typescript": "^4.5.2"
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   },
   "eslintConfig": {
     "extends": [
