--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@davatar/react": "^1.8.1",
+    "@davatar/react": "^1.9.0",
     "@jaames/iro": "^5.5.2",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "connected-react-router": "^6.9.1",
+    "connected-react-router": "^6.9.2",
     "ethers": "^5.6.5",
     "firebase": "^9.8.0",
     "interactjs": "^1.10.11",
@@ -35,8 +35,11 @@
   "devDependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "react-scripts": "^5.0.1",
